--- a/files/osu-skinSource/skin.ini
+++ b/files/osu-skinSource/skin.ini
@@ -3,8 +3,8 @@ Name: Idontknow
 Author: cutt37
 Version: 2.7
 
-AllowSliderBallTint: 0
 AnimationFramerate: -1
+AllowSliderBallTint: 0
 ComboBurstRandom: 0
 CursorCentre: 1
 CursorExpand: 1
@@ -13,6 +13,7 @@ CursorTrailRotate: 0
 HitCircleOverlayAboveNumber: 1
 LayeredHitSounds: 1
 SliderBallFlip: 0
+SliderStyle: 1
 SpinnerNoBlink: 1
 SpinnerFadePlayfield: 0
 SpinnerFrequencyModulate: 1
@@ -30,50 +31,8 @@ SongSelectInactiveText: 0,204,255
 
 [Fonts]
 HitCirclePrefix: Default/default
-ScorePrefix: Score/score
-ComboPrefix: Score/score
 HitCircleOverlap: 0
+ScorePrefix: Score/score
 ScoreOverlap: 0
+ComboPrefix: Score/score
 ComboOverlap: 0
-
-[Mania]
-Keys: 4
-ColumnStart: 317
-ColumnWidth: 55,55,55,55
-BarlineHeight: 0
-LightPosition: 402
-
-[Mania]
-Keys: 5
-ColumnStart: 290
-ColumnWidth: 55,55,55,55,55
-BarlineHeight: 0
-LightPosition: 402
-
-[Mania]
-Keys: 6
-ColumnStart: 262
-ColumnWidth: 55,55,55,55,55,55
-BarlineHeight: 0
-LightPosition: 402
-
-[Mania]
-Keys: 7
-ColumnStart: 287
-ColumnWidth: 40,40,40,40,40,40,40
-BarlineHeight: 0
-LightPosition: 402
-
-[Mania]
-Keys: 8
-ColumnStart: 267
-ColumnWidth: 40,40,40,40,40,40,40,40
-BarlineHeight: 0
-LightPosition: 402
-
-[Mania]
-Keys: 9
-ColumnStart: 247
-ColumnWidth: 40,40,40,40,40,40,40,40,40
-BarlineHeight: 0
-LightPosition: 402
